# smartesprit

./: Makefile  capteur2.glade.bak  config.status
autom4te.cache/: requests
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur2  capteur2.c  capteur2.h  fonction.c  interface.c  interface.c.bak  interface.h.bak  liste_capteur.txt  main.c  menu.txt  reclamation.txt  users.txt  verifier.c
src/.deps/: callbacks.Po  capteur2.Po  fonction.Po  personne.Po  verifier.Po
